# paquete-python

./: .coverage  .gitignore  CHAT_CONFIG_IMPLEMENTATION.md  README.md  conftest.py  instrucciones.md  pyproject.toml
.github/workflows/: tests.yml
data/spectra/: spectrum_LP_Turbine_MAD32CY005_AM2_0.json  spectrum_LP_Turbine_MAD32CY005_AM2_1554993802.json  spectrum_test_machine_test_point_test_proc_mode_0.json
data/waves/: wave_LP_Turbine_MAD31CY005_AM1_0.json  wave_LP_Turbine_MAD31CY005_AM1_1555007154.json  wave_LP_Turbine_MAD32CY005_AM2_0.json  wave_LP_Turbine_MAD32CY005_AM2_1554993802.json  wave_LP_Turbine_MAD32CY005_AM2_1555119736.json  wave_test_machine_test_point_test_proc_mode_0.json
docs/: CLI_CHAT_GUIDE.md  LLM_CLIENT_README.md  MODEL_SELECTION_STRATEGY.md  MODEL_STRATEGY_OCT_2025.md
examples/: llm_groq_example.py
llm/: DocComprimida.md
scripts/: compare_spectra.py  setup_llm.py
src/: cli.py  t8_client.py
src/llm_client/: __init__.py  api_doc_fragmenter.py  cache.py  chunked_analyzer.py  chunking.py  groq_client.py  model_selector.py
src/t8-client/: cli.py  t8_client.py
src/t8_client/: __init__.py  cli.py  t8_client.py
tests/: test_api.py  test_cli.py  test_waveform.py
