[project]
name = "t8-client"
version = "0.1.0"
description = "A Python package to interact with T8 api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "construct>=2.10.70",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "requests",
    "python-dotenv",
    "tornado>=6.5.2",
    "datetime",
    "responses",
    "requests_mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t8-client"]
pythonpath = ["src/t8-client"]

[project.scripts]
t8-cli = "src.t8-client.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88
lint.select = ["ANN", "Q", "E", "F", "UP", "B"]
lint.ignore = []
lint.exclude = []
